# Anfangstemplate-Wilking

./: Hello_World.c  a.out
Leon Semester 1/: CMakeLists.txt  Hello_World.c
Leon_Semester_1/: CMakeCache.txt  CMakeLists.txt  Hello_World.c  Homework_2.c  Makefile  a.out  cmake_install.cmake  run_cmake.sh
Leon_Semester_1/Homework/: CMakeLists.txt  Homework_3.c  Homework_4_GradeAverage.c  Homework_4_LeapYear.c  Homework_4_StudentStruct.c  Homework_5_BinaryConverter  Homework_5_BinaryConverter.c  Homework_5_Triangle.c  a.out
Leon_Semester_1/Project_with_libraries/: CMakeLists.txt  run_cmake.sh
Leon_Semester_1/Project_with_libraries/include/: shared.h  static.h
Leon_Semester_1/Project_with_libraries/src/: main.c  shared.c  static.c
